Resolve parameters from DefineParam